Alteração no rodapê

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 La Casa de Papel Web | Site de fãs não oficial</p>
+                <p>&copy; 2025 Kaelton Silva | Site de fãs não oficial</p>
             </div>
         </div>
     </footer>
